--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,6 +13,9 @@
     app_log_path: /var/log/docker_compose_app.log
     service_name: test-api
     service_port: 8000
+
+    nginx_conf_path: "/etc/nginx/sites-available/app_proxy"
+    nginx_conf_link: "/etc/nginx/sites-enabled/app_proxy"
   roles:
     - role: geerlingguy.node_exporter
       become: true
@@ -23,3 +26,4 @@
   post_tasks:
     - include_tasks: install-app.yml
     - include_tasks: add-monitoring.yml
+    - include_tasks: nginx.yml
