--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -13,7 +13,8 @@
     app_log_path: /var/log/docker_compose_app.log
     service_name: test-api
     service_port: 8000
-    aws_s3_endpoint_url: "http://192.168.100.229:9000"
+    # aws_s3_endpoint_url: "http://192.168.100.229:9000"
+    aws_s3_endpoint_url: "https://savannah-bucket.s3.us-east-1.amazonaws.com"
 
     nginx_conf_path: "/etc/nginx/sites-available/app_proxy"
     nginx_conf_link: "/etc/nginx/sites-enabled/app_proxy"
